--- a/docs/style.css
+++ b/docs/style.css
@@ -7,56 +7,29 @@ body{
 	background: #EAEAEA;
 }
 
-.line-preview,
-.line-editor {
-	font-family: inherit;
-	font-size: 1rem;
-	line-height: 1.5rem;
-	min-height: 1.5rem;
-	padding: .25rem;
-	width: 100%;
-	width: calc(100% - .5rem);
-	margin: 0 auto;
-	cursor: text;
-	border: none;
-	border-radius: 0;
-	outline: 0;
-}
-
-#text_field {
-	background: #FFF;
-	padding: 7px;
-	margin: 7px;
-}
-
-.line-preview *,
-.line-editor  * {
+#app h1 {
 	margin: 0;
-}
-
-.line-preview {
-	overflow: hidden;
-}
-
-.line-preview h1 {
 	border-bottom: 1px solid #AAA;
 	padding-bottom: 3px;
 	margin-bottom: -4px;
 }
 
-.line-preview blockquote {
+#app blockquote {
+	margin: 0;
 	border-left: 5px solid #CCC;
 	padding: .25rem .5rem;
 	margin: -.25rem 0;
 }
 
-.line-preview img {
+#app img {
+	margin: 0;
 	float: left;
 	max-width: 100%;
 	margin-right: 14px;
 }
 
-.line-preview code {
+#app code {
+	margin: 0;
 	background: #666;
 	color: #FFF;
 	padding: .25rem;
@@ -64,4 +37,3 @@ body{
 	border-radius: 5px;
 	letter-spacing: 1px;
 }
-
